--- a/_manuscript/index.out.ipynb
+++ b/_manuscript/index.out.ipynb
@@ -39,16 +39,17 @@
     "-   Yang Liu, Althoff, and Heer ([2020](#ref-liu2020)) provides visualization to communicate the decision processes through the Analytic Decision Graphs (ADG)\n",
     "-   Simson et al. ([2025](#ref-simson2025)) conducts a participatory AI study to demonstrate the “garden of forking paths” of decisions in data analysis and how it affects ML fairness\n",
     "\n",
-    "## 2.1 Recording decisions in data analysis\n",
+    "# 3. Extracting decisions from data analysis\n",
     "\n",
-    "-   give example from extracting decision from sentences of a paper\n",
-    "-   adapt from the tidy data principle - each row is a decision Wickham ([2014](#ref-wickham2014))  \n",
+    "## 3.1 Decisions in data analysis\n",
+    "\n",
+    "-   what constitute a decision in data analysis\n",
+    "-   adapt from the tidy data principle - each row is a decision Wickham ([2014](#ref-wickham2014))\n",
     "-   some decisions are related to how the variable is estimated spatially and temporally\n",
     "-   model level decisions on how the model is estimated spatially (for multi-site analyses) and/or temporally (different treatments for years or seasons)\n",
-    "-   sometimes the decisions are not explicitly stated in the paper (use AIC to choose the degree of freedom in a smoothing spline)\n",
-    "-   sometimes the reason is not explicitly stated (e.g., why 3 degree of freedom)\n",
+    "-   extract the exact text from the paper\n",
     "\n",
-    "A hypothetical database of decisions may look as follows:\n",
+    "An example decisions may look as follows:\n",
     "\n",
     "| Paper | ID | Model | variable | method | parameter | type | reason | decision |\n",
     "|--------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
@@ -57,23 +58,124 @@
     "| ostro | 3 | Poisson regression | relative humidity | LOESS | smoothing parameter | parameter | to minimize Akaike’s Information Criterion | NA |\n",
     "| ostro | 4 | Poisson regression | model | NA | NA | spatial | to account for variation among cities | separate regression models fit in each city |\n",
     "\n",
-    "## 2.2 Automatic reading of literature with LLM\n",
+    "However, decisions statements are often implicit, and the justifications may not directly align with the decisions themselves. We identify four common anomalies:\n",
     "\n",
-    "-   We use LLM to automatic process the literature to output analysis decisions. Currently, two LLMs, Antropic Claude and Google Gemini, are able to take input of pdf documents and the results reported in this paper is based on Gemini’s output. See the section sensitivity analysis for the comparison of the two models.\n",
-    "-   Claude is decoder only, Gemini is an encoder–decoder model\n",
-    "    -   these models may paraphrase or hallucinate unless explicitly told not to since it is generative in nature based on the predicted probability of the next word from the text and the instruction\n",
-    "-   prompt: instruct the LLM to produce a markdown file with decisions included in a JSON block with the fields described in Section xxx\n",
-    "-   use the `ellmer` package ([Wickham, Cheng, and Jacobs 2025](#ref-ellmer)) to connect to Gemini API to process the pdf documents in R.\n",
-    "-   experiment with seed and temperature\n",
-    "-   Our task involve a reasoning component in that it requires casual reasoning to identify the decisions made by the authors, and its justification/ rationale, rather than purely summarizing the text through pattern-matching.\n",
+    "1.  **Authors may combine multiple decisions into a single sentence** for coherence and conciseness of the writing. Consider the following excerpt from Ostro et al. ([2006](#ref-ostro2006)):\n",
     "\n",
-    "## 2.3 Review the LLM output\n",
+    "> Other covariates, such as day of the week and smoothing splines of 1-day lags of average temperature and humidity (each with 3 df), were also included in the model because they may be associated with daily mortality and are likely to vary over time in concert with air pollution levels.\n",
+    "\n",
+    "This sentence contains four decisions: two for temperature (the temporal lag and the smoothing spline parameter) and two for humidity. These decisions should be structured as separate entries.\n",
+    "\n",
+    "1.  **The justification does not directly address the decision choice.** In the example above, the stated rationale (“and are likely to vary over time in concert with air pollution levels”) supports the general inclusion of temporal lags but does not justify the specific choice of 1-day lag over alternatives, such as 2-day average of lags 0 and 1 (lag01) and single-day lag of 2 days (lag2). As such, the reason field should be recorded as NA.\n",
+    "\n",
+    "2.  **Some decisions may be omitted because they are data-driven**. For instance, Katsouyanni et al. ([2001](#ref-katsouyanni2001)) states:\n",
+    "\n",
+    "> The inclusion of lagged weather variables and the choice of smoothing parameters for all of the weather variables were done by minimizing Akaike’s information criterion.\n",
+    "\n",
+    "In this case, while the method of selection (minimizing AIC) is specified, the actual degree of freedom used is not. Such data-driven decisions may be recorded with “NA” in the decision field, but the reason field should still be recorded as “by minimizing Akaike’s information criterion”\n",
+    "\n",
+    "1.  **Information required to interpret the decision may be distributed across multiple sections**. In the previous example, “weather variables” refers to mean temperature and relative humidity, as defined earlier in the text. This requires cross-referencing across sections to identify the correct variables associated with each modeling choice."
+   ],
+   "id": "49d70c12-58d6-4c13-9d37-78a7c39a9e45"
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/html"
+   },
+   "source": [
+    "<!-- | Paper | ID | Model | variable | method | parameter | type | reason | decision | -->"
+   ],
+   "id": "3c928d3a-4286-422d-a5c8-32f556676d89"
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/html"
+   },
+   "source": [
+    "<!-- |-----|--|--------|--------|--------|--------|--------|--------|--------| -->"
+   ],
+   "id": "0be92125-fe57-4df9-bfec-06d130b83451"
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/html"
+   },
+   "source": [
+    "<!-- | ostro | xx | Poisson regression | temperature | smoothing spline | degree of freedom | parameter | NA | 3 df | -->"
+   ],
+   "id": "bddb5678-854e-4e7e-ac67-ba266f798203"
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/html"
+   },
+   "source": [
+    "<!-- | ostro | xx | Poisson regression | temperature | NA | NA | temporal | NA | 1-day lag | -->"
+   ],
+   "id": "4f9f0a01-4b6e-4e99-a013-c74bc6b1ecb3"
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/html"
+   },
+   "source": [
+    "<!-- | ostro | xx | Poisson regression | relative humidity | smoothing spline | degree of freedom | parameter | NA | 4 df | -->"
+   ],
+   "id": "35f5a462-c284-431f-ad7d-b36ab69742a5"
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/html"
+   },
+   "source": [
+    "<!-- | ostro | xx | Poisson regression | relative humidity | NA | NA | temporal | NA | 1-day lag | -->"
+   ],
+   "id": "5f20b63c-b2de-4e76-a72b-844e3c0ea6ab"
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/html"
+   },
+   "source": [
+    "<!-- | katsouyanni2001 | xx | generalized additive models (GAM) Poisson regression | mean temperature | smoothing spline | degree of freedom | parameter | by minimizing Akaike’s information criterion | NA | -->"
+   ],
+   "id": "3bafb321-3f41-417e-a89b-e00c9c55f72a"
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/html"
+   },
+   "source": [
+    "<!-- | katsouyanni2001 | xx | generalized additive models (GAM)  Poisson regression | relative humidity | smoothing spline | degree of freedom | parameter | by minimizing Akaike’s information criterion | NA | -->"
+   ],
+   "id": "980d3339-b1ea-4cd0-a245-6dee5eb366c5"
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Automatic reading of literature with LLM\n",
+    "\n",
+    "While decisions can be extracted manually from the literature, this process is labor-intensive and time-consuming. Recent advances in Large Language Models (LLMs) have demonstrated potential for automating the extraction of structured information from unstructured text \\[ref\\]. In this work, we use LLMs to automatically identify decisions made by authors during their data analysis processes.\n",
+    "\n",
+    "Text recognition from PDF document relies on Optical Character Recognition (OCR) to convert scanned images into machine-readable text – capability currently offered by Antropic Claude and Google Gemini. We instruct the LLM to generate a markdown file containing a JSON block that records extracted decisions, which can then be read into statistical software for further analysis. The exact prompt feed to the LLM is provided in the Appendix. The `ellmer` package ([Wickham, Cheng, and Jacobs 2025](#ref-ellmer)) in R is used to connect to the Gemini and Claude API, providing the PDF attachment and the prompt in a markdown file as inputs. **?@fig-llm** shows the overall workflow for decision extract using LLMs.\n",
+    "\n",
+    "## 3.3 Review the LLM output\n",
     "\n",
     "-   something about result validation of LLM output\n",
+    "-   The sensitivity of the two models to the prompt and the model parameters, such as temperature and seed, is discussed in <a href=\"#sec-sensitivity\" class=\"quarto-xref\">Section 5.2</a>.\n",
     "\n",
     "The shiny app is designed to provide users a visual interface to review and edit the decisions extracted by the LLM from the literature. The app allows three actions from the users: 1) *overwrite* – modify the content of a particular cell, equivalently `dplyr::mutate(xxx = ifelse(CONDITION, \"yyy\" , xxx))`, 2) *delete* – remove a particular cell, `dplyr::filter(!(CONDITION))`, and 3) *add* – manually enter a decision, `dplyr::bind_rows()`. <a href=\"#fig-shiny\" class=\"quarto-xref\">Figure 1</a> illustrates the *overwrite* action in the Shiny application, where users interactively filter the data and preview the rows affected by their edits—in this case, changing the model entry from “generalized additive Poisson time series regression” to the less verbose “Poisson regression”. Upon confirmation, the corresponding `tidyverse` code is generated, and users can download the edited table and incorporate the code into their R script."
    ],
-   "id": "ea9fc77c-9290-4919-b8d8-0177203a2a34"
+   "id": "52c82530-f572-4c3f-bfe5-1d84948a7714"
   },
   {
    "cell_type": "code",
@@ -95,9 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.4 Decision quality summary\n",
-    "\n",
-    "# 3. Calculate paper similarity\n",
+    "# 4. Calculating paper similarity\n",
     "\n",
     "-   pre-processing\n",
     "    -   standardize statistical methods its corresponding parameters (LOESS, smoothing spline, etc)\n",
@@ -111,31 +211,59 @@
     "    -   check/ report on the number of decisions compared in each paper pair\n",
     "-   similarity score can serve as the distance matrix to cluster papers by their similarity on decision choices\n",
     "\n",
-    "## 3.1 Sensitivity analysis\n",
+    "# 5. Results\n",
     "\n",
+    "## 5.1 Air pollution mortality modelling\n",
+    "\n",
+    "Decision quality summary\n",
+    "\n",
+    "-   look at for one type of decision (time) - what are the choices made by different papers\n",
+    "-   look at whether decisions changes across time\n",
+    "-   Visualize the decision database: apply clustering algorithm and visualize the database through `sigma.js`\n",
+    "\n",
+    "## 5.2 Sensitivity analysis"
+   ],
+   "id": "df4ae10c-55d6-4f87-a148-796ba2dd46c8"
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/html"
+   },
+   "source": [
+    "<!-- -   Claude is decoder only, Gemini is an encoder–decoder model -->"
+   ],
+   "id": "d3fd24e2-12cc-4c4e-b29e-63e103698178"
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/html"
+   },
+   "source": [
+    "<!--     -   these models may paraphrase or hallucinate unless explicitly told not to since it is generative in nature based on the predicted probability of the next word from the text and the instruction -->"
+   ],
+   "id": "c143ad54-890e-47d0-b673-a54812a38b4f"
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "sensitivity of the pipeline: 1) LLM, 2) text model, 3) prompt, 4) LLM parameters\n",
     "\n",
     "-   standard `BERT` ([Devlin et al. 2019](#ref-devlin2019)), `Roberta` ([Yinhan Liu et al., n.d.](#ref-liu)): trained on a much larger dataset (160GB v.s. BERT’s 15GB), `transformer-xl` ([Dai et al., n.d.](#ref-dai)), `xlnet` by Google Brain ([Yang et al., n.d.](#ref-yang)), and two domain-trained BERT models: `sciBert` ([Beltagy, Lo, and Cohan 2019](#ref-beltagy2019)) and `bioBert`([Lee et al. 2020](#ref-lee2020)), trained on PubMed and PMC data.\n",
     "\n",
     "-   A section on reproducibility of LLM outputs: prompt experiment (see if there are papers discussing this: https://arxiv.org/pdf/2406.06608)\n",
     "\n",
-    "# 4. Applications\n",
-    "\n",
-    "## 4.1 Air pollution mortality modelling\n",
-    "\n",
-    "-   look at for one type of decision (time) - what are the choices made by different papers\n",
-    "-   look at whether decisions changes across time\n",
-    "-   Visualize the decision database: apply clustering algorithm and visualize the database through `sigma.js`\n",
-    "\n",
-    "## 4.2 Species distribution modelling\n",
-    "\n",
-    "# 5. Discussion\n",
+    "# 6. Discussion\n",
     "\n",
     "-   Only prompting engineering is used to extract decisions from the literature. We expect that fine-tuning the model on statistical or domain-specific literature to yield more robust performance on the same document, though it would require substantially more training effort.\n",
     "-   people from the NYU-LMU workshop are interested to have code script attached as well because people can do one thing in the script but report another in the paper - it would be interesting to compare the paper and the script with some syntax extraction.\n",
     "-   Validation of the output:\n",
     "\n",
-    "# 6. Reference\n",
+    "the nature of the task: Our task involve a reasoning component in that it requires casual reasoning to identify the decisions made by the authors, and its justification/ rationale, rather than purely summarizing the text through pattern-matching.\n",
+    "\n",
+    "# 7. Reference\n",
     "\n",
     "Alspaugh, Sara, Nava Zokaei, Andrea Liu, Cindy Jin, and Marti A. Hearst. 2019. “Futzing and Moseying: Interviews with Professional Data Analysts on Exploration Practices.” *IEEE Transactions on Visualization and Computer Graphics* 25 (1): 22–31. <https://doi.org/10.1109/TVCG.2018.2865040>.\n",
     "\n",
@@ -161,11 +289,15 @@
     "\n",
     "Kale, Alex, Matthew Kay, and Jessica Hullman. 2019. “Decision-Making Under Uncertainty in Research Synthesis: Designing for the Garden of Forking Paths.” In, 114. CHI ’19. New York, NY, USA: Association for Computing Machinery. <https://doi.org/10.1145/3290605.3300432>.\n",
     "\n",
+    "Katsouyanni, Klea, Giota Touloumi, Evangelia Samoli, Alexandros Gryparis, Alain Le Tertre, Yannis Monopolis, Giuseppe Rossi, et al. 2001. “Confounding and Effect Modification in the Short-Term Effects of Ambient Particles on Total Mortality: Results from 29 European Cities Within the APHEA2 Project.” *Epidemiology* 12 (5): 521. <https://journals.lww.com/epidem/fulltext/2001/09000/confounding_and_effect_modification_in_the.11.aspx>.\n",
+    "\n",
     "Lee, Jinhyuk, Wonjin Yoon, Sungdong Kim, Donghyeon Kim, Sunkyu Kim, Chan Ho So, and Jaewoo Kang. 2020. “BioBERT: A Pre-Trained Biomedical Language Representation Model for Biomedical Text Mining.” Edited by Jonathan Wren. *Bioinformatics* 36 (4): 1234–40. <https://doi.org/10.1093/bioinformatics/btz682>.\n",
     "\n",
     "Liu, Yang, Tim Althoff, and Jeffrey Heer. 2020. “Paths Explored, Paths Omitted, Paths Obscured: Decision Points & Selective Reporting in End-to-End Data Analysis.” In, 114. CHI ’20. New York, NY, USA: Association for Computing Machinery. <https://doi.org/10.1145/3313831.3376533>.\n",
     "\n",
     "Liu, Yinhan, Myle Ott, Naman Goyal, Jingfei Du, Mandar Joshi, Danqi Chen, Omer Levy, Mike Lewis, Luke Zettlemoyer, and Veselin Stoyanov. n.d. “RoBERTa: A Robustly Optimized BERT Pretraining Approach.” <https://doi.org/10.48550/arXiv.1907.11692>.\n",
+    "\n",
+    "Ostro, Bart, Rachel Broadwin, Shelley Green, Wen-Ying Feng, and Michael Lipsett. 2006. “Fine Particulate Air Pollution and Mortality in Nine California Counties: Results from CALFINE.” *Environmental Health Perspectives* 114 (1): 29–33. <https://doi.org/10.1289/ehp.8335>.\n",
     "\n",
     "Sarstedt, Marko, Susanne J. Adler, Christian M. Ringle, Gyeongcheol Cho, Adamantios Diamantopoulos, Heungsun Hwang, and Benjamin D. Liengaard. 2024. “Same Model, Same Data, but Different Outcomes: Evaluating the Impact of Method Choices in Structural Equation Modeling.” *Journal of Product Innovation Management* 41 (6): 1100–1117. <https://doi.org/10.1111/jpim.12738>.\n",
     "\n",
@@ -179,7 +311,7 @@
     "\n",
     "Yang, Zhilin, Zihang Dai, Yiming Yang, Jaime Carbonell, Ruslan Salakhutdinov, and Quoc V. Le. n.d. “XLNet: Generalized Autoregressive Pretraining for Language Understanding.” <https://doi.org/10.48550/arXiv.1906.08237>."
    ],
-   "id": "3d121663-9593-4d7e-a56d-fdefdd0d4bb0"
+   "id": "a36fed23-9645-40e6-aea9-015e290b0021"
   }
  ],
  "nbformat": 4,
